# factorial

./: Cargo.toml  Makefile  README.md  project-generate.toml
.github/workflows/: build.yml  release.yml
src/: main.rs
