[package]
name = "factorial"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
log = "0.4"
wasmcloud-interface-factorial = "0.5.0"
wasmbus-rpc = "0.9"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.4.0"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "factorial"
path = "src/main.rs"
